--- a/code.html
+++ b/code.html
@@ -5,7 +5,11 @@
     <link rel="stylesheet" href="design.css" />
   </head>
   <body>
-    
+    <h1>
+      hello childrens how r u
+      <br />
+      Lets talk about Math's Multiplication Table
+    </h1>
   </body>
   <script></script>
 </html>
