--- a/code.html
+++ b/code.html
@@ -11,5 +11,5 @@
       Lets talk about Math's Multiplication Table
     </h1>
   </body>
-  <script></script>
+  <script src="app.js"></script>
 </html>
