--- a/code.html
+++ b/code.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="design.css" />
   </head>
   <body>
-    <h1>
-      hello childrens how r u
-      <br />
-      Lets talk about Math's Multiplication Table
-    </h1>
+    <div class="main">
+      <h1>
+        hello childrens how r u
+        <br />
+        Lets talk about Math's Multiplication Table
+      </h1>
+    </div>
   </body>
   <script src="app.js"></script>
 </html>
