--- a/index.html
+++ b/index.html
@@ -7,24 +7,18 @@
   <body>
     <div class="main">
       <h1>
-        hello childrens how r u
+        Hello, children! How are you?
         <br />
-        Lets talk about Math's Multiplication Table
+        Let's talk about Math's Multiplication Table
       </h1>
+    </div>
+    <div class="multiplication-table">
+      <h2>Multiplication Table</h2>
+      <div id="table-container">
+        <!-- The multiplication table will be generated here -->
+      </div>
     </div>
   </body>
   <script src="app.js"></script>
-  <!-- <script>
-    let number = prompt(
-      " If you'd like to know a specific multiplication table, just let me know which one you're interested in, and I'll be happy to help."
-    );
 
-    function mlTable(number) {
-      for (input = 1; input <= 10; input++) {
-        document.write(`${number} x ${input}  =  ${number * input} <br>  `);
-      }
-    }
-
-    mlTable(number);
-  </script> -->
 </html>
