--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
         <!-- The multiplication table will be generated here -->
       </div>
     </div>
+    <div class="prompt-container">
+      <input
+        type="text"
+        id="numberInput"
+        placeholder="Enter a number for the multiplication table"
+      />
+      <input type="button" value="Generate Table" onclick="generateTable()" />
+    </div>
   </body>
   <script src="app.js"></script>
-
 </html>
