--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="multiplication-table">
       <h2>Multiplication Table</h2>
       <div id="table-container">
-        <!-- The multiplication table will be generated here -->
+        <!--  multiplication table will be generated here -->
       </div>
     </div>
     <div class="prompt-container">
