--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <meta name="keywords" content="HTML, CSS, JavaScript" />
+    <meta name="author" content="ali hasan, codebyarnob, arnob" />
     <title>Math's Multiplication Table for childern</title>
 
     <link rel="stylesheet" href="design.css" />
